--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-hacker
 title: Conference in honor of the 60th birthday of Peter Tallos
+description: Magyarkuti Gyula kurzusa a Budapest Corvinus Egyetemen.
