--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-minimal
 title: Conference in honor of the 60th birthday of Peter Tallos
 description: Magyarkuti Gyula kurzusa a Budapest Corvinus Egyetemen.
